slave_origin_full/pi/sandbox/rlabplus/rlab-3.1.1-gcc_failed/y.output
   0  $accept : program $end

   1  program :
   2          | program REOF
   3          | program line
   4          | program HELP
   5          | program HELP_NAME
   6          | program SYS_CMD
   7          | program error

   8  reof :
   9       | REOF

  10  line : NL
  11       | ENDFILE
  12       | stmts NL
  13       | stmts REOF

  14  stmts : stmt
  15        | stmts stmt

  16  stmt : ENDFILE
  17       | texpr separator
  18       | if_stmt_open
  19       | if_stmt
  20       | do_stmt
  21       | while_stmt
  22       | for_stmt
  23       | switch_stmt
  24       | break
  25       | continue
  26       | return_stmt
  27       | c_stmt
  28       | gl_stmt
  29       | fstatic_stmt
  30       | class_public_stmt
  31       | class_private_stmt
  32       | rfile_stmt
  33       | req_stmt
  34       | QUIT

  35  separator :
  36            | SEMIC
  37            | Q_MARK

  38  rfile_stmt : RFILE
  39             | RFILE rnames

  40  req_stmt : REQUIRE rnames

  41  rnames : FNAME
  42         | rnames FNAME

  43  left_paren : '('

  44  right_paren : ')'

  45  left_brace : '{'

  46  right_brace : '}'

  47  else : ELSE

  48  then : LOOPTHEN ':'

  49  cline : NL
  50        | then
  51        | stmts

  52  cstmts : cline
  53         | cstmts cline

  54  c_stmt : left_brace cstmts right_brace

  55  if_stmt : if cond newline c_stmt newline end else newline if_stmt_open end
  56          | if cond newline c_stmt newline end else newline if_stmt end
  57          | if cond newline c_stmt newline end else newline c_stmt end

  58  if_stmt_open : if cond newline c_stmt newline reof end

  59  $$1 :

  60  switch_stmt : switch_label left_paren expr right_paren $$1 newline '{' newline switch_case_list newline '}' end

  61  switch_label : SWITCH

  62  switch_case_list :
  63                   | switch_default_case
  64                   | switch_case_list1
  65                   | switch_case_list1 switch_default_case

  66  switch_case_list1 : switch_case
  67                    | switch_case_list1 switch_case

  68  $$2 :

  69  switch_case_open : SWITCH_CASE $$2 expr ':'

  70  switch_case : switch_case_open newline cstmts newline break
  71              | switch_case_open newline cstmts newline
  72              | switch_case_open newline

  73  $$3 :

  74  switch_default_case : SWITCH_DEFAULT ':' newline $$3 cstmts

  75  do : DO

  76  do_stmt : do newline c_stmt newline while cond separator end
  77          | do newline c_stmt newline until cond separator end

  78  while_stmt : while cond newlines c_stmt end

  79  for_stmt : for for_spec newlines c_stmt end

  80  for : FOR

  81  for_spec : left_paren vid IN for_vec_expr right_paren

  82  for_vec_expr : texpr

  83  return_stmt : RETURN texpr separator

  84  cond : left_paren texpr right_paren

  85  while : WHILE

  86  until : UNTIL

  87  if : IF

  88  break : BREAK separator

  89  continue : CONTINUE separator

  90  end :

  91  texpr : expr
  92        | vexpr
  93        | assign

  94  expr : '(' texpr ')'

  95  vexpr : expr ':' expr
  96        | expr ':' expr ':' expr

  97  assign : vid '=' texpr
  98         | expr '[' vec_expr SEMIC vec_expr ']' '=' texpr
  99         | expr '[' vec_expr SEMIC ']' '=' texpr
 100         | expr '[' SEMIC vec_expr ']' '=' texpr
 101         | expr '[' vec_expr ']' '=' texpr
 102         | expr '.' '[' expr ']' '=' texpr
 103         | expr '.' NAME '=' texpr
 104         | olist '=' texpr

 105  mat_expr : '[' mat_list ']'

 106  expr : mat_expr

 107  mat_list :
 108           | vec_expr
 109           | mat_list SEMIC vec_expr
 110           | mat_list SEMIC nl vec_expr

 111  vec_expr : expr
 112           | vexpr
 113           | vec_expr ',' vec_expr

 114  expr : expr '[' vec_expr SEMIC vec_expr ']'
 115       | expr '[' vec_expr SEMIC ']'
 116       | expr '[' SEMIC vec_expr ']'
 117       | expr '[' SEMIC ']'
 118       | expr '[' ']'
 119       | expr '[' vec_expr ']'
 120       | expr '[' ':' ']'
 121       | function
 122       | class
 123       | list_expr
 124       | list_member

 125  list_el : NAME '=' texpr
 126          | texpr

 127  list_el_term : SEMIC
 128               | NL

 129  left_list : LEFT_LIST
 130            | LEFT_LIST SEMIC
 131            | LEFT_LIST NL

 132  right_list : RIGHT_LIST
 133             | list_el_term RIGHT_LIST

 134  list_expr : left_list list_list right_list

 135  list_member : expr '.' '[' expr ']'
 136              | expr '.' NAME

 137  list_list :
 138            | list_el
 139            | list_list list_el_term list_el

 140  olist : L_OLIST olist_list R_OLIST

 141  olist_list : vid
 142             | olist_list SEMIC vid

 143  expr : value
 144       | vid
 145       | vid INC
 146       | vid DEC
 147       | NAME '(' opt_arg_list ')'
 148       | expr '(' opt_arg_list ')'
 149       | self '(' opt_arg_list ')'
 150       | list_member '(' opt_arg_list ')'
 151       | expr '+' expr
 152       | expr '-' expr
 153       | expr '*' expr
 154       | expr EL_MUL_OP expr
 155       | expr '/' expr
 156       | expr LDIV_OP expr
 157       | expr EL_DIV_OP expr
 158       | expr EL_LDIV_OP expr
 159       | expr '^' expr
 160       | expr EL_POW_OP expr
 161       | expr TRANSPOSE
 162       | expr EL_TRANSPOSE
 163       | expr GT expr
 164       | expr GE expr
 165       | expr LT expr
 166       | expr LE expr
 167       | expr EQ expr
 168       | expr NE expr
 169       | expr AND expr
 170       | expr OR expr
 171       | expr ADDTO expr
 172       | expr SUBFROM expr
 173       | expr EL_MUL_BY expr
 174       | expr EL_DIV_BY expr
 175       | NOT expr
 176       | '-' expr
 177       | '+' expr

 178  value : NUMBER
 179        | INTEGER
 180        | iNUMBER
 181        | R_STRING
 182        | rscript_stmts

 183  vid : var

 184  var : NAME
 185      | GST

 186  nl : NL
 187     | nl NL

 188  newline :
 189          | NL

 190  newlines :
 191           | NL
 192           | newlines NL

 193  NL : '\n'

 194  function : function_ent

 195  $$4 :

 196  $$5 :

 197  function_ent : FUNCTION $$4 left_paren opt_arg_name_list right_paren newline '{' newlines $$5 cstmts '}'

 198  self : SELF

 199  opt_arg_name_list :
 200                    | NAME
 201                    | opt_arg_name_list ',' NAME

 202  $$6 :

 203  gl_stmt : LOCAL_DEC $$6 '(' opt_local_name_list ')' separator

 204  $$7 :

 205  gl_stmt : GLOBAL_DEC $$7 '(' opt_local_name_list ')' separator

 206  opt_local_name_list : NAME
 207                      | opt_local_name_list ',' NAME

 208  opt_arg_list :
 209               | texpr
 210               | texpr_list

 211  texpr_list : texpr_or_empty ',' texpr_or_empty
 212             | texpr_list ',' texpr_or_empty

 213  texpr_or_empty :
 214                 | texpr

 215  fstatic_stmt : FSTATIC_DEC '(' opt_fstatic_name_list ')' separator

 216  opt_fstatic_name_list : NAME
 217                        | opt_fstatic_name_list ',' NAME

 218  rscript_dec : RSCRIPT_DEC newline

 219  rscript_stmts : rscript_dec R_SCRIPT

 220  class_private_stmt : CLASS_PRIV '(' opt_class_private_name_list ')' separator newlines

 221  opt_class_private_name_list : NAME
 222                              | opt_class_private_name_list ',' NAME

 223  class_public_stmt : CLASS_PUBL '(' opt_class_public_name_list ')' separator newlines

 224  opt_class_public_name_list : NAME
 225                             | opt_class_public_name_list ',' NAME

 226  class_inst_var_list :
 227                      | NAME
 228                      | class_inst_var_list ',' NAME

 229  class : class_ent

 230  $$8 :

 231  $$9 :

 232  class_ent : CLASSDEF $$8 left_paren class_inst_var_list right_paren $$9 newlines R_SCRIPT

state 0
	$accept : . program $end  (0)
	program : .  (1)

	.  reduce 1

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . REOF  (2)
	program : program . line  (3)
	program : program . HELP  (4)
	program : program . HELP_NAME  (5)
	program : program . SYS_CMD  (6)
	program : program . error  (7)

	$end  accept
	error  shift 2
	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	REOF  shift 6
	ENDFILE  shift 7
	NAME  shift 8
	R_STRING  shift 9
	HELP_NAME  shift 10
	SYS_CMD  shift 11
	CLASS_PUBL  shift 12
	CLASS_PRIV  shift 13
	DO  shift 14
	WHILE  shift 15
	IF  shift 16
	QUIT  shift 17
	FOR  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	SWITCH  shift 21
	FUNCTION  shift 22
	RETURN  shift 23
	LOCAL_DEC  shift 24
	GLOBAL_DEC  shift 25
	SELF  shift 26
	HELP  shift 27
	RFILE  shift 28
	REQUIRE  shift 29
	GST  shift 30
	FSTATIC_DEC  shift 31
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	L_OLIST  shift 38
	'['  shift 39
	'('  shift 40
	'{'  shift 41
	'\n'  shift 42
	.  error

	stmt  goto 43
	c_stmt  goto 44
	stmts  goto 45
	line  goto 46
	NL  goto 47
	rfile_stmt  goto 48
	req_stmt  goto 49
	expr  goto 50
	mat_expr  goto 51
	texpr  goto 52
	vexpr  goto 53
	value  goto 54
	do  goto 55
	while  goto 56
	if  goto 57
	for  goto 58
	function  goto 59
	class  goto 60
	switch_label  goto 61
	if_stmt_open  goto 62
	if_stmt  goto 63
	while_stmt  goto 64
	for_stmt  goto 65
	return_stmt  goto 66
	do_stmt  goto 67
	switch_stmt  goto 68
	break  goto 69
	continue  goto 70
	vid  goto 71
	assign  goto 72
	list_expr  goto 73
	olist  goto 74
	list_member  goto 75
	class_private_stmt  goto 76
	class_public_stmt  goto 77
	fstatic_stmt  goto 78
	gl_stmt  goto 79
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_brace  goto 84
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 2
	program : program error .  (7)

	.  reduce 7


state 3
	value : INTEGER .  (179)

	.  reduce 179


state 4
	value : NUMBER .  (178)

	.  reduce 178


state 5
	value : iNUMBER .  (180)

	.  reduce 180


state 6
	program : program REOF .  (2)

	.  reduce 2


7: reduce/reduce conflict (reduce 11, reduce 16) on INTEGER
7: reduce/reduce conflict (reduce 11, reduce 16) on NUMBER
7: reduce/reduce conflict (reduce 11, reduce 16) on iNUMBER
7: reduce/reduce conflict (reduce 11, reduce 16) on REOF
7: reduce/reduce conflict (reduce 11, reduce 16) on ENDFILE
7: reduce/reduce conflict (reduce 11, reduce 16) on NAME
7: reduce/reduce conflict (reduce 11, reduce 16) on R_STRING
7: reduce/reduce conflict (reduce 11, reduce 16) on CLASS_PUBL
7: reduce/reduce conflict (reduce 11, reduce 16) on CLASS_PRIV
7: reduce/reduce conflict (reduce 11, reduce 16) on DO
7: reduce/reduce conflict (reduce 11, reduce 16) on WHILE
7: reduce/reduce conflict (reduce 11, reduce 16) on IF
7: reduce/reduce conflict (reduce 11, reduce 16) on QUIT
7: reduce/reduce conflict (reduce 11, reduce 16) on FOR
7: reduce/reduce conflict (reduce 11, reduce 16) on BREAK
7: reduce/reduce conflict (reduce 11, reduce 16) on CONTINUE
7: reduce/reduce conflict (reduce 11, reduce 16) on SWITCH
7: reduce/reduce conflict (reduce 11, reduce 16) on FUNCTION
7: reduce/reduce conflict (reduce 11, reduce 16) on RETURN
7: reduce/reduce conflict (reduce 11, reduce 16) on LOCAL_DEC
7: reduce/reduce conflict (reduce 11, reduce 16) on GLOBAL_DEC
7: reduce/reduce conflict (reduce 11, reduce 16) on SELF
7: reduce/reduce conflict (reduce 11, reduce 16) on RFILE
7: reduce/reduce conflict (reduce 11, reduce 16) on REQUIRE
7: reduce/reduce conflict (reduce 11, reduce 16) on GST
7: reduce/reduce conflict (reduce 11, reduce 16) on FSTATIC_DEC
7: reduce/reduce conflict (reduce 11, reduce 16) on RSCRIPT_DEC
7: reduce/reduce conflict (reduce 11, reduce 16) on CLASSDEF
7: reduce/reduce conflict (reduce 11, reduce 16) on '+'
7: reduce/reduce conflict (reduce 11, reduce 16) on '-'
7: reduce/reduce conflict (reduce 11, reduce 16) on NOT
7: reduce/reduce conflict (reduce 11, reduce 16) on LEFT_LIST
7: reduce/reduce conflict (reduce 11, reduce 16) on L_OLIST
7: reduce/reduce conflict (reduce 11, reduce 16) on '['
7: reduce/reduce conflict (reduce 11, reduce 16) on '('
7: reduce/reduce conflict (reduce 11, reduce 16) on '{'
7: reduce/reduce conflict (reduce 11, reduce 16) on '\n'
state 7
	line : ENDFILE .  (11)
	stmt : ENDFILE .  (16)

	.  reduce 11


8: shift/reduce conflict (shift 88, reduce 184) on '('
state 8
	expr : NAME . '(' opt_arg_list ')'  (147)
	var : NAME .  (184)

	'('  shift 88
	INTEGER  reduce 184
	NUMBER  reduce 184
	iNUMBER  reduce 184
	REOF  reduce 184
	ENDFILE  reduce 184
	NAME  reduce 184
	R_STRING  reduce 184
	CLASS_PUBL  reduce 184
	CLASS_PRIV  reduce 184
	DO  reduce 184
	WHILE  reduce 184
	IF  reduce 184
	QUIT  reduce 184
	FOR  reduce 184
	BREAK  reduce 184
	CONTINUE  reduce 184
	LOOPTHEN  reduce 184
	SWITCH  reduce 184
	SWITCH_CASE  reduce 184
	SWITCH_DEFAULT  reduce 184
	FUNCTION  reduce 184
	RETURN  reduce 184
	SEMIC  reduce 184
	Q_MARK  reduce 184
	LOCAL_DEC  reduce 184
	GLOBAL_DEC  reduce 184
	SELF  reduce 184
	RFILE  reduce 184
	REQUIRE  reduce 184
	GST  reduce 184
	FSTATIC_DEC  reduce 184
	RSCRIPT_DEC  reduce 184
	CLASSDEF  reduce 184
	'='  reduce 184
	','  reduce 184
	':'  reduce 184
	OR  reduce 184
	AND  reduce 184
	EQ  reduce 184
	NE  reduce 184
	GT  reduce 184
	GE  reduce 184
	LT  reduce 184
	LE  reduce 184
	ADDTO  reduce 184
	SUBFROM  reduce 184
	EL_MUL_BY  reduce 184
	EL_DIV_BY  reduce 184
	'+'  reduce 184
	'-'  reduce 184
	'*'  reduce 184
	'/'  reduce 184
	EL_MUL_OP  reduce 184
	EL_DIV_OP  reduce 184
	EL_LDIV_OP  reduce 184
	LDIV_OP  reduce 184
	'^'  reduce 184
	EL_POW_OP  reduce 184
	TRANSPOSE  reduce 184
	EL_TRANSPOSE  reduce 184
	NOT  reduce 184
	INC  reduce 184
	DEC  reduce 184
	LEFT_LIST  reduce 184
	RIGHT_LIST  reduce 184
	L_OLIST  reduce 184
	'['  reduce 184
	']'  reduce 184
	'.'  reduce 184
	')'  reduce 184
	'{'  reduce 184
	'}'  reduce 184
	'\n'  reduce 184


state 9
	value : R_STRING .  (181)

	.  reduce 181


state 10
	program : program HELP_NAME .  (5)

	.  reduce 5


state 11
	program : program SYS_CMD .  (6)

	.  reduce 6


state 12
	class_public_stmt : CLASS_PUBL . '(' opt_class_public_name_list ')' separator newlines  (223)

	'('  shift 89
	.  error


state 13
	class_private_stmt : CLASS_PRIV . '(' opt_class_private_name_list ')' separator newlines  (220)

	'('  shift 90
	.  error


state 14
	do : DO .  (75)

	.  reduce 75


state 15
	while : WHILE .  (85)

	.  reduce 85


state 16
	if : IF .  (87)

	.  reduce 87


state 17
	stmt : QUIT .  (34)

	.  reduce 34


state 18
	for : FOR .  (80)

	.  reduce 80


state 19
	break : BREAK . separator  (88)
	separator : .  (35)

	SEMIC  shift 91
	Q_MARK  shift 92
	INTEGER  reduce 35
	NUMBER  reduce 35
	iNUMBER  reduce 35
	REOF  reduce 35
	ENDFILE  reduce 35
	NAME  reduce 35
	R_STRING  reduce 35
	CLASS_PUBL  reduce 35
	CLASS_PRIV  reduce 35
	DO  reduce 35
	WHILE  reduce 35
	IF  reduce 35
	QUIT  reduce 35
	FOR  reduce 35
	BREAK  reduce 35
	CONTINUE  reduce 35
	LOOPTHEN  reduce 35
	SWITCH  reduce 35
	SWITCH_CASE  reduce 35
	SWITCH_DEFAULT  reduce 35
	FUNCTION  reduce 35
	RETURN  reduce 35
	LOCAL_DEC  reduce 35
	GLOBAL_DEC  reduce 35
	SELF  reduce 35
	RFILE  reduce 35
	REQUIRE  reduce 35
	GST  reduce 35
	FSTATIC_DEC  reduce 35
	RSCRIPT_DEC  reduce 35
	CLASSDEF  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	NOT  reduce 35
	LEFT_LIST  reduce 35
	L_OLIST  reduce 35
	'['  reduce 35
	'('  reduce 35
	'{'  reduce 35
	'}'  reduce 35
	'\n'  reduce 35

	separator  goto 93


state 20
	continue : CONTINUE . separator  (89)
	separator : .  (35)

	SEMIC  shift 91
	Q_MARK  shift 92
	INTEGER  reduce 35
	NUMBER  reduce 35
	iNUMBER  reduce 35
	REOF  reduce 35
	ENDFILE  reduce 35
	NAME  reduce 35
	R_STRING  reduce 35
	CLASS_PUBL  reduce 35
	CLASS_PRIV  reduce 35
	DO  reduce 35
	WHILE  reduce 35
	IF  reduce 35
	QUIT  reduce 35
	FOR  reduce 35
	BREAK  reduce 35
	CONTINUE  reduce 35
	LOOPTHEN  reduce 35
	SWITCH  reduce 35
	SWITCH_CASE  reduce 35
	SWITCH_DEFAULT  reduce 35
	FUNCTION  reduce 35
	RETURN  reduce 35
	LOCAL_DEC  reduce 35
	GLOBAL_DEC  reduce 35
	SELF  reduce 35
	RFILE  reduce 35
	REQUIRE  reduce 35
	GST  reduce 35
	FSTATIC_DEC  reduce 35
	RSCRIPT_DEC  reduce 35
	CLASSDEF  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	NOT  reduce 35
	LEFT_LIST  reduce 35
	L_OLIST  reduce 35
	'['  reduce 35
	'('  reduce 35
	'{'  reduce 35
	'}'  reduce 35
	'\n'  reduce 35

	separator  goto 94


state 21
	switch_label : SWITCH .  (61)

	.  reduce 61


state 22
	function_ent : FUNCTION . $$4 left_paren opt_arg_name_list right_paren newline '{' newlines $$5 cstmts '}'  (197)
	$$4 : .  (195)

	.  reduce 195

	$$4  goto 95


state 23
	return_stmt : RETURN . texpr separator  (83)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	L_OLIST  shift 38
	'['  shift 39
	'('  shift 40
	.  error

	expr  goto 50
	mat_expr  goto 51
	texpr  goto 96
	vexpr  goto 53
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 71
	assign  goto 72
	list_expr  goto 73
	olist  goto 74
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 24
	gl_stmt : LOCAL_DEC . $$6 '(' opt_local_name_list ')' separator  (203)
	$$6 : .  (202)

	.  reduce 202

	$$6  goto 97


state 25
	gl_stmt : GLOBAL_DEC . $$7 '(' opt_local_name_list ')' separator  (205)
	$$7 : .  (204)

	.  reduce 204

	$$7  goto 98


state 26
	self : SELF .  (198)

	.  reduce 198


state 27
	program : program HELP .  (4)

	.  reduce 4


state 28
	rfile_stmt : RFILE .  (38)
	rfile_stmt : RFILE . rnames  (39)

	FNAME  shift 99
	INTEGER  reduce 38
	NUMBER  reduce 38
	iNUMBER  reduce 38
	REOF  reduce 38
	ENDFILE  reduce 38
	NAME  reduce 38
	R_STRING  reduce 38
	CLASS_PUBL  reduce 38
	CLASS_PRIV  reduce 38
	DO  reduce 38
	WHILE  reduce 38
	IF  reduce 38
	QUIT  reduce 38
	FOR  reduce 38
	BREAK  reduce 38
	CONTINUE  reduce 38
	LOOPTHEN  reduce 38
	SWITCH  reduce 38
	SWITCH_CASE  reduce 38
	SWITCH_DEFAULT  reduce 38
	FUNCTION  reduce 38
	RETURN  reduce 38
	LOCAL_DEC  reduce 38
	GLOBAL_DEC  reduce 38
	SELF  reduce 38
	RFILE  reduce 38
	REQUIRE  reduce 38
	GST  reduce 38
	FSTATIC_DEC  reduce 38
	RSCRIPT_DEC  reduce 38
	CLASSDEF  reduce 38
	'+'  reduce 38
	'-'  reduce 38
	NOT  reduce 38
	LEFT_LIST  reduce 38
	L_OLIST  reduce 38
	'['  reduce 38
	'('  reduce 38
	'{'  reduce 38
	'}'  reduce 38
	'\n'  reduce 38

	rnames  goto 100


state 29
	req_stmt : REQUIRE . rnames  (40)

	FNAME  shift 99
	.  error

	rnames  goto 101


state 30
	var : GST .  (185)

	.  reduce 185


state 31
	fstatic_stmt : FSTATIC_DEC . '(' opt_fstatic_name_list ')' separator  (215)

	'('  shift 102
	.  error


state 32
	rscript_dec : RSCRIPT_DEC . newline  (218)
	newline : .  (188)

	'\n'  shift 42
	R_SCRIPT  reduce 188

	NL  goto 103
	newline  goto 104


state 33
	class_ent : CLASSDEF . $$8 left_paren class_inst_var_list right_paren $$9 newlines R_SCRIPT  (232)
	$$8 : .  (230)

	.  reduce 230

	$$8  goto 105


state 34
	expr : '+' . expr  (177)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	'['  shift 39
	'('  shift 40
	.  error

	expr  goto 106
	mat_expr  goto 51
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 107
	list_expr  goto 73
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 35
	expr : '-' . expr  (176)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	'['  shift 39
	'('  shift 40
	.  error

	expr  goto 108
	mat_expr  goto 51
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 107
	list_expr  goto 73
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 36
	expr : NOT . expr  (175)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	'['  shift 39
	'('  shift 40
	.  error

	expr  goto 109
	mat_expr  goto 51
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 107
	list_expr  goto 73
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


37: shift/reduce conflict (shift 110, reduce 129) on SEMIC
37: shift/reduce conflict (shift 42, reduce 129) on '\n'
state 37
	left_list : LEFT_LIST .  (129)
	left_list : LEFT_LIST . SEMIC  (130)
	left_list : LEFT_LIST . NL  (131)

	SEMIC  shift 110
	'\n'  shift 42
	INTEGER  reduce 129
	NUMBER  reduce 129
	iNUMBER  reduce 129
	NAME  reduce 129
	R_STRING  reduce 129
	FUNCTION  reduce 129
	SELF  reduce 129
	GST  reduce 129
	RSCRIPT_DEC  reduce 129
	CLASSDEF  reduce 129
	'+'  reduce 129
	'-'  reduce 129
	NOT  reduce 129
	LEFT_LIST  reduce 129
	RIGHT_LIST  reduce 129
	L_OLIST  reduce 129
	'['  reduce 129
	'('  reduce 129

	NL  goto 111


state 38
	olist : L_OLIST . olist_list R_OLIST  (140)

	NAME  shift 112
	GST  shift 30
	.  error

	vid  goto 113
	var  goto 80
	olist_list  goto 114


state 39
	mat_expr : '[' . mat_list ']'  (105)
	mat_list : .  (107)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	'['  shift 39
	'('  shift 40
	SEMIC  reduce 107
	']'  reduce 107

	expr  goto 115
	vec_expr  goto 116
	mat_expr  goto 51
	mat_list  goto 117
	vexpr  goto 118
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 107
	list_expr  goto 73
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 40
	expr : '(' . texpr ')'  (94)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	NAME  shift 8
	R_STRING  shift 9
	FUNCTION  shift 22
	SELF  shift 26
	GST  shift 30
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	L_OLIST  shift 38
	'['  shift 39
	'('  shift 40
	.  error

	expr  goto 50
	mat_expr  goto 51
	texpr  goto 119
	vexpr  goto 53
	value  goto 54
	function  goto 59
	class  goto 60
	vid  goto 71
	assign  goto 72
	list_expr  goto 73
	olist  goto 74
	list_member  goto 75
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 41
	left_brace : '{' .  (45)

	.  reduce 45


state 42
	NL : '\n' .  (193)

	.  reduce 193


state 43
	stmts : stmt .  (14)

	.  reduce 14


state 44
	stmt : c_stmt .  (27)

	.  reduce 27


state 45
	line : stmts . NL  (12)
	line : stmts . REOF  (13)
	stmts : stmts . stmt  (15)

	INTEGER  shift 3
	NUMBER  shift 4
	iNUMBER  shift 5
	REOF  shift 120
	ENDFILE  shift 121
	NAME  shift 8
	R_STRING  shift 9
	CLASS_PUBL  shift 12
	CLASS_PRIV  shift 13
	DO  shift 14
	WHILE  shift 15
	IF  shift 16
	QUIT  shift 17
	FOR  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	SWITCH  shift 21
	FUNCTION  shift 22
	RETURN  shift 23
	LOCAL_DEC  shift 24
	GLOBAL_DEC  shift 25
	SELF  shift 26
	RFILE  shift 28
	REQUIRE  shift 29
	GST  shift 30
	FSTATIC_DEC  shift 31
	RSCRIPT_DEC  shift 32
	CLASSDEF  shift 33
	'+'  shift 34
	'-'  shift 35
	NOT  shift 36
	LEFT_LIST  shift 37
	L_OLIST  shift 38
	'['  shift 39
	'('  shift 40
	'{'  shift 41
	'\n'  shift 42
	.  error

	stmt  goto 122
	c_stmt  goto 44
	NL  goto 123
	rfile_stmt  goto 48
	req_stmt  goto 49
	expr  goto 50
	mat_expr  goto 51
	texpr  goto 52
	vexpr  goto 53
	value  goto 54
	do  goto 55
	while  goto 56
	if  goto 57
	for  goto 58
	function  goto 59
	class  goto 60
	switch_label  goto 61
	if_stmt_open  goto 62
	if_stmt  goto 63
	while_stmt  goto 64
	for_stmt  goto 65
	return_stmt  goto 66
	do_stmt  goto 67
	switch_stmt  goto 68
	break  goto 69
	continue  goto 70
	vid  goto 71
	assign  goto 72
	list_expr  goto 73
	olist  goto 74
	list_member  goto 75
	class_private_stmt  goto 76
	class_public_stmt  goto 77
	fstatic_stmt  goto 78
	gl_stmt  goto 79
	var  goto 80
	function_ent  goto 81
	class_ent  goto 82
	rscript_stmts  goto 83
	left_brace  goto 84
	left_list  goto 85
	self  goto 86
	rscript_dec  goto 87


state 46
	program : program line .  (3)

	.  reduce 3


state 47
	line : NL .  (10)

	.  reduce 10


state 48
	stmt : rfile_stmt .  (32)

	.  reduce 32


state 49
	stmt : req_stmt .  (33)

	.  reduce 33

